--- a/html/music.html
+++ b/html/music.html
@@ -28,6 +28,9 @@
 <li>
 John Coltrane's <em>Moment's Notice</em>: <a href="http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0">http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0</a>
 </li>
+<li>
+Cannonball Addeley: <em>This Here</em>, <em>Spontaneous Combustion</em>.
+</li>
 </ul>
 
 <h2 id="toc_1.2">Pop Songs (Which I usually sing at KTV)</h2>
@@ -73,7 +76,7 @@ Empire State of Mind, Jay-Z.
 <hr />
 <p>
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: December 07, 2011 22:32:25 
+Last Modified: December 16, 2011 09:03:07 
 </p>
 
 </body>
