--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,18 @@
 </p>
 
 <p>
+<code>----------------------------</code>
+</p>
+
+<p>
+<strong>To all frustrated, sleep-deprived, stressed out high school seniors deperately preparing your applications: LISTEN TO CANNONBALL ADDERLEY's MERCY, MERCY, MERCY!</strong>
+</p>
+
+<p>
+<code>----------------------------</code>
+</p>
+
+<p>
 Hi! My name is <strong>Zongheng Yang</strong>, a high school senior in <a href="http://www.shenzhong.net">Shenzhen Middle School</a>, Shenzhen, China (<a href="http://maps.google.com/maps?q=shenzhen,+china&amp;hl=en&amp;client=firefox-a&amp;gl=us&amp;z=10&amp;vpsrc=0">Google Maps</a>). 
 </p>
 
@@ -155,7 +167,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: November 26, 2011 10:27:22 
+Last Modified: December 22, 2011 10:47:20 
 </p>
 
 </body>
