--- a/html/Reading.html
+++ b/html/Reading.html
@@ -58,9 +58,16 @@ Great Gatsby, by F. Scott Fitzgerald.
 </li>
 </ul>
 
+<h2 id="toc_1.5">Poetry</h2>
+<ul>
+<li>
+<em>Ulysses</em>, by Alfred, Lord Tennyson
+</li>
+</ul>
+
 <hr />
 <p>
-Last Modified: December 01, 2011 23:09:00 
+Last Modified: December 26, 2011 19:58:48 
 </p>
 
 </body>
