add github link in Index

--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 </li>
 </ul>
 <li>
-Computer Science
+Computer Science (Github (codes, projects, work): <a href="https://github.com/concretevitamin/">https://github.com/concretevitamin/</a>)
 </li>
 <ul>
 <li>
@@ -167,7 +167,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: December 22, 2011 10:47:20 
+Last Modified: December 28, 2011 21:58:19 
 </p>
 
 </body>
