index: add Ulysses quote

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,10 @@
 </p>
 
 <p>
+``To strive, to seek, to find, and not to yield.'' -- <em>Ulysses</em>
+</p>
+
+<p>
 <code>----------------------------</code>
 </p>
 
@@ -36,7 +40,7 @@ This personal Wiki is constructed and maintained with <a href="http://www.vim.or
 </p>
 
 <p>
-The Wiki records various aspects of my life and presents some of my interests.
+The Wiki records some academic notes and some of my interests.
 </p>
 
 <h2 id="toc_1.1">ME</h2>
@@ -167,7 +171,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: December 28, 2011 21:58:19 
+Last Modified: December 29, 2011 23:20:13 
 </p>
 
 </body>
