--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@ The Wiki records some academic notes and some of my interests.
 <a href="Reading.html">My Reading</a>
 </li>
 <li>
-<a href="Movies.html">Movies I've watched</a>
+<a href="Movies.html">Movies I've watched</a>. I'm a movie addict.
 </li>
 <li>
 <a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
@@ -171,7 +171,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: December 29, 2011 23:20:13 
+Last Modified: January 07, 2012 22:24:13 
 </p>
 
 </body>
