linux notes: add a link to wiki/unix directory structure

--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Linux Notes - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
 </head>
 <body>
 <h1 id="toc_1">Linux Notes</h1>
@@ -59,7 +59,7 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 </p>
 
 <p>
-<code>man hier</code> read more on the file system hierarchy.<br />
+<code>man hier</code> read more on the file system hierarchy. Or [here <a href="http://en.wikipedia.org/wiki/Unix_directory_structure">http://en.wikipedia.org/wiki/Unix_directory_structure</a>]<br />
 </p>
 
 <h2 id="toc_1.5">(General) Notes</h2>
@@ -71,8 +71,21 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: August 29, 2011 22:27:36 
+Last Modified: January 12, 2012 19:15:25 
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
