--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="Stylesheet" type="text/css" href="style.css">
+<link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Covi's Personal Knowledge Base Wiki</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
 </head>
 <body>
-
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
 
 <p>
@@ -22,7 +20,7 @@
 </p>
 
 <p>
-{{{----------------------------}}}
+<code>----------------------------</code>
 </p>
 
 <p>
@@ -30,7 +28,7 @@
 </p>
 
 <p>
-{{{----------------------------}}}
+<code>----------------------------</code>
 </p>
 
 <p>
@@ -49,123 +47,120 @@ The Wiki records some academic notes and some of my interests.
 <ul>
 <li>
 <a href="me.html">About Me</a>
-
+</li>
 <li>
 <a href="Reading.html">My Reading</a>
-
+</li>
 <li>
 <a href="Movies.html">Movies I've watched</a>. I'm a movie addict.
-
+</li>
 <li>
 <a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
-
+</li>
 </ul>
-<p>
-&lt;!-- <a href="Pastebin.html">My Pastebin for Random Stuff</a> (Only for personal use; not much value here.) --&gt;
-</p>
   
 <h2 id="toc_1.2">Serious (or not so serious?) Stuff</h2>
 <ul>
 <li>
 <a href="Math.html">Math</a>, notes on math.
-
+</li>
 <ul>
 <li>
 <a href="calculus.html">Calculus</a>, notes on calculus.
-
+</li>
 <li>
 <a href="Combinatorics.html">Combinatorics</a>, notes/problems/solutions/questions on combinatorics.
-
+</li>
 <li>
 <a href="Modeling.html">Modeling</a>.
-
+</li>
 </ul>
 <li>
 Computer Science (Github (codes, projects, work): <a href="https://github.com/concretevitamin/">https://github.com/concretevitamin/</a>)
-
+</li>
 <ul>
 <li>
 <a href="ProjectEuler.html">My Project Euler Codes</a>.
-
+</li>
 <li>
 <a href="NOIP 2011 Prep.html">My Preparation for NOIP 2011</a>.
-
+</li>
 <li>
 <a href="Sol To DP Book.html">Solutions to Problems in The Art and Theory of Dynamic Programming</a>. 
-
+</li>
 <li>
 <a href="NOIP Notes.html">Some basic notes</a>. 
-
+</li>
 <li>
 <a href="Graph Theory and Algorithms.html">Graph Theory and Algorithms</a>.
-
+</li>
 <li>
 <a href="AP Computer Science.html">AP Computer Science</a>; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-
+</li>
 <li>
 <a href="Python Notes.html">Python Notes</a>. I find learning Python a great break from college applications.
-
+</li>
 <li>
 <a href="wordcount.html">wordcount.py, with interesting results!</a> wordcount.py is a small python program I wrote for fun. Check out the results!
-
+</li>
 </ul>
 <li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
-
+</li>
 <li>
 <a href="Linux Notes.html">Notes on Linux</a>.
-
+</li>
 <li>
 <a href="Physics.html">Physics</a>.
-
+</li>
 <li>
 <a href="Statistics.html">Statistics</a>.
-
+</li>
 <li>
 <a href="Microeconomics.html">Microeconomics</a>.
-
+</li>
 <li>
 <a href="Macroeconomics.html">Macroeconomics</a>.
-
+</li>
 </ul>
 
 <h2 id="toc_1.3">Tools</h2>
 <ul>
 <li>
 <a href="Vim.html">Vim</a>
-
+</li>
 <ul>
 <li>
 <a href="Vimwiki.html">Vimwiki</a>, an extension for Vim that enables editting and maintaining a personal Wiki.
-
+</li>
 <li>
 <a href="Vimperator.html">Vimperator</a>, a Firefox extension that renders browsing utimately pleasant.
-
+</li>
 </ul>
 <li>
 <a href="Filezilla.html">Filezilla</a>
-
+</li>
 <li>
 <a href="Irssi.html">Irssi</a>, a solid <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a> client.
-
+</li>
 <li>
 <a href="Git.html">Git</a>. I'm learning this powerful VCS. 
-
+</li>
 <ul>
 <li>
 Check out how I use Git, Vimwiki, cron, and several other fantastic tools to maintain this Wiki here: <a href="About.html">About the Maintenance of this Personal Knowledge Base</a>.
-
+</li>
 </ul>
 <li>
-<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up MathJax with Vimwiki here, so I can display cool math such as $a<sup><small>2 = b</small></sup>2 + c^2$.
-
+<a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up MathJax with Vimwiki here, so I can display cool math such as $a^2 = b^2 + c^2$.
+</li>
 </ul>
 
 <h2 id="toc_1.4">Devices</h2>
 <ul>
 <li>
 <a href="Kindle.html">Kindle</a>. I am an ardent Kindle advocate.
-
+</li>
 </ul>
 <hr />
 <h2 id="toc_1.5">Contact</h2>
@@ -176,9 +171,21 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-&lt;!-- Put cursor on "F" and press &lt;F5&gt; to renew the datestamp. --&gt;
-Last Modified: Wed 11 Jan 2012 05:24:15 PM CST
+Last Modified: Wed 11 Jan 2012 05:28:49 PM CST
 </p>
 
 </body>
+
+<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX","output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [["$","$"],["\\(","\\)"]],
+        displayMath: [ ['$$','$$'], ['\[','\]'] ],
+        processEscapes: true
+    }
+  });
+</script>
+
 </html>
