--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -59,7 +59,7 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 </p>
 
 <p>
-<code>man hier</code> read more on the file system hierarchy. Or [here <a href="http://en.wikipedia.org/wiki/Unix_directory_structure">http://en.wikipedia.org/wiki/Unix_directory_structure</a>]<br />
+<code>man hier</code> read more on the file system hierarchy. Or <a href="http://en.wikipedia.org/wiki/Unix_directory_structure">here</a>.<br />
 </p>
 
 <h2 id="toc_1.5">(General) Notes</h2>
@@ -71,7 +71,7 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: January 12, 2012 19:15:25 
+Last Modified: January 12, 2012 19:32:57 
 </p>
 
 </body>
