--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@ The Wiki records some academic notes and some of my interests.
 <a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
 </li>
 </ul>
-  
+
 <h2 id="toc_1.2">Serious (or not so serious?) Stuff</h2>
 <ul>
 <li>
@@ -79,6 +79,9 @@ The Wiki records some academic notes and some of my interests.
 Computer Science (Github (codes, projects, work): <a href="https://github.com/concretevitamin/">https://github.com/concretevitamin/</a>)
 </li>
 <ul>
+<li>
+<a href="gcc.html">Notes on gcc/g++</a>. Options/Compiling/Make.
+</li>
 <li>
 <a href="ProjectEuler.html">My Project Euler Codes</a>.
 </li>
@@ -171,7 +174,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: Wed 11 Jan 2012 05:28:49 PM CST
+Last Modified: January 20, 2012 20:17:49 
 </p>
 
 </body>
