add a link to a tutorial in gcc.wiki

--- a/html/gcc.html
+++ b/html/gcc.html
@@ -21,10 +21,17 @@
 <code>-S</code> generates <code>.s</code>, compiled assembly source codes.
 </li>
 </ul>
+
+<h1 id="toc_2">Make and Makefiles</h1>
+<ul>
+<li>
+<a href="http://mrbook.org/tutorials/make/">http://mrbook.org/tutorials/make/</a>
+</li>
+</ul>
 <hr />
 <p>
 Created Date: January 20, 2012 20:14:02<br />
-Last Modified: January 20, 2012 20:17:42 
+Last Modified: January 20, 2012 20:26:31 
 </p>
 
 </body>
