gcc.wiki: minor error fixed

--- a/html/gcc.html
+++ b/html/gcc.html
@@ -18,7 +18,7 @@
 <code>-c</code> generates <code>.o</code>.
 </li>
 <li>
-<code>-S</code> generates <code>.s</code>, compiled assembly source codes.
+<code>-S</code> generates <code>.s</code>, compiled "object files" (e.g., assembly source codes under Windows).
 </li>
 </ul>
 
@@ -31,7 +31,7 @@
 <hr />
 <p>
 Created Date: January 20, 2012 20:14:02<br />
-Last Modified: January 20, 2012 20:26:31 
+Last Modified: January 20, 2012 20:29:25 
 </p>
 
 </body>
