vim.wiki: add list of plugins

--- a/html/Vim.html
+++ b/html/Vim.html
@@ -20,27 +20,37 @@ Check out my .vimrc <a href="vimrc.html">here</a>.
 </li>
 </ul>
 
-<h2 id="toc_1.1">Basic Editting Stuff</h2>
+<h2 id="toc_1.1">My Vim Plugins</h2>
+<ul>
+<li>
+<a href="http://www.vim.org/scripts/script.php?script_id=39">Matchit.vim</a>, extended % matching for HTML, <a href="LaTeX.html">LaTeX</a>, and many other languages 
+</li>
+<li>
+<a href="http://www.vim.org/scripts/script.php?script_id=1697">surround.vim</a>, delete/change/add parentheses/quotes/xml-tags/much more with ease.
+</li>
+</ul>
+
+<h2 id="toc_1.2">Basic Editting Stuff</h2>
 <ul>
 <li>
 If some lines are highlighted in visual mode (checkout <code>visual-mode</code>), press <code>J</code> to join them altogether.
 </li>
 </ul>
 
-<h2 id="toc_1.2">Some Notes</h2>
+<h2 id="toc_1.3">Some Notes</h2>
 <ul>
 <li>
 I have read some help texts, many tutorials, and tried to program some simple task. But it seems very hard to get familiar with Vim scripts (Feb 03, 2011 13:48:33)
 </li>
 </ul>
 
-<h2 id="toc_1.3">Substitution</h2>
+<h2 id="toc_1.4">Substitution</h2>
 <p>
 &lt;nowiki&gt;:s/\(\w\+\)/<code>\1</code> # /&lt;/nowiki&gt;
 Change &lt;nowiki&gt;A B&lt;/nowiki&gt; to &lt;nowiki&gt;<code>A</code> # B&lt;/nowiki&gt;.<br />
 </p>
 
-<h2 id="toc_1.4">Commands</h2>
+<h2 id="toc_1.5">Commands</h2>
 <ul>
 <li>
 Use <code>@:</code> to repeat last colon command.
@@ -53,7 +63,7 @@ File encoding issues: <code>:e! ++enc=utf-8</code>
 </li>
 </ul>
 
-<h2 id="toc_1.5">Datestamp</h2>
+<h2 id="toc_1.6">Datestamp</h2>
 <p>
 Add<br />
 </p>
@@ -64,13 +74,13 @@ nnoremap &lt;F5&gt; 3wv$"=strftime("%c")&lt;CR&gt;P
 to your <code>VIMRC</code>. Place cursor on the head of "Last Modified" line and &lt;F5&gt;. See <a href="http_//vim.wikia.com/wiki/Insert_current_date_or_time.html">also</a>. 
 </p>
 
-<h2 id="toc_1.6">Linux-related</h2>
+<h2 id="toc_1.7">Linux-related</h2>
 <p>
 Use <code>vim-gtk</code> or <code>vim-gnome</code> under linux (for instance, under <code>vim-basic</code> <code>"+y</code>, or the system clipboard, will not work).<br />
 </p>
 
 <hr />
-<h2 id="toc_1.7">Useful Links &amp; Resouces</h2>
+<h2 id="toc_1.8">Useful Links &amp; Resouces</h2>
 <ol>
 <li>
 Some tutorial videos here (<a href="http://ontwik.com/tools/vim-from-novice-to-professional-by-derek-wyatt-p1/">http://ontwik.com/tools/vim-from-novice-to-professional-by-derek-wyatt-p1/</a>).
@@ -93,9 +103,7 @@ Some tutorial videos here (<a href="http://ontwik.com/tools/vim-from-novice-to-p
 </ol>
 <hr />
 <p>
-Last Modified: Apr 01, 2011 11:05:40 
-%b %d, %Y %T 
-&lt;U0025&gt;&lt;U0062&gt;&lt;U0020&gt;&lt;U0025&gt;&lt;U0064&gt;&lt;U002C&gt;&lt;U0020&gt;&lt;U0025&gt;&lt;U0059&gt;&lt;U0020&gt;&lt;U0025&gt;&lt;U0054&gt;
+Last Modified: January 30, 2012 12:49:46 
 </p>
 
 </body>
