movies.wiki: add [warrior]

--- a/html/Movies.html
+++ b/html/Movies.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Movies I've Watched</title>
-<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <h1 id="toc_1">Movies I've Watched</h1>
@@ -160,11 +160,14 @@
 <li>
 <em>Tinker, Tailor, Soldier, Spy</em>, 2011.
 </li>
+<li>
+<em>Warrior</em>, 2011. (This one shares a similiar story structure, which is gradual revelation by subtle scenes or moments, with the <em>Tinker</em> movie. <em>Tinker</em> handles better the subtlety, and <em>Warrior</em> arouses more emotions. Both are nice watch!)
+</li>
 </ul>
 <hr />
 <p>
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: January 29, 2012 17:16:57 
+Last Modified: January 31, 2012 19:16:24 
 </p>
 
 </body>
