index.wiki: add descriptions of movies.wiki

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>Covi's Personal Knowledge Base Wiki</title>
-<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <h1 id="toc_1">Welcome to Covi's Personal Knowledge Base Wiki!</h1>
@@ -48,7 +48,7 @@ The Wiki records some academic notes and some of my interests.
 <a href="Reading.html">My Reading</a>
 </li>
 <li>
-<a href="Movies.html">Movies I've watched</a>. I'm a movie addict.
+<a href="Movies.html">Movies I've watched</a>. I'm a (good-) movie semi-addict. It's itself a distinct art form, different from literary works or even the scripts. Movies = Watch, think, and enjoy.
 </li>
 <li>
 <a href="music.html">Music I love</a>. Jazz. Cantonese Pop. Albums and Pieces.
@@ -170,7 +170,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: January 29, 2012 17:31:00 
+Last Modified: January 31, 2012 19:33:19 
 </p>
 
 </body>
