vim.wiki: extend the list of plugins for ctags+taglist

--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <h2 id="toc_1.3">Tools</h2>
 <ul>
 <li>
-<a href="Vim.html">Vim</a>
+<a href="Vim.html">Vim</a>. <em>The</em> editor you need. I don't edit things without it.
 </li>
 <ul>
 <li>
