--- a/html/Vim.html
+++ b/html/Vim.html
@@ -23,10 +23,16 @@ Check out my .vimrc <a href="vimrc.html">here</a>.
 <h2 id="toc_1.1">My Vim Plugins</h2>
 <ul>
 <li>
-<a href="http://www.vim.org/scripts/script.php?script_id=39">Matchit.vim</a>, extended % matching for HTML, <a href="LaTeX.html">LaTeX</a>, and many other languages 
+Pathogen. Elegant plugin manager.
+</li>
+<li>
+<a href="http://www.vim.org/scripts/script.php?script_id=39">Matchit.vim</a>, extended % matching for HTML, <a href="LaTeX.html">LaTeX</a>, and many other languages.
 </li>
 <li>
 <a href="http://www.vim.org/scripts/script.php?script_id=1697">surround.vim</a>, delete/change/add parentheses/quotes/xml-tags/much more with ease.
+</li>
+<li>
+ctags + <a href="http://www.vim.org/scripts/script.php?script_id=273">taglist</a>. Ctags is actually a standalone program, capable of generating a list of functions/variables/classes, i.e. 'tags', found in files in different languages. Taglist.vim displays the result in a vsplit (to get rid of the left-hand scroll bar when it is displayed, <code>:set guioptions-=L</code>). A list of ctags tricks <a href="http://stackoverflow.com/questions/563616/vim-and-ctags-tips-and-tricks">here</a>.
 </li>
 </ul>
 
@@ -103,7 +109,7 @@ Some tutorial videos here (<a href="http://ontwik.com/tools/vim-from-novice-to-p
 </ol>
 <hr />
 <p>
-Last Modified: January 30, 2012 12:49:46 
+Last Modified: January 31, 2012 19:38:26 
 </p>
 
 </body>
