edited css: modified the appearance of hyperlinks; added log.wiki

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@ This personal Wiki is constructed and maintained with <a href="http://www.vim.or
 The Wiki records some academic notes and some of my interests.
 </p>
 
-<h2 id="toc_1.1">ME</h2>
+<h2 id="toc_1.1">Me</h2>
 <ul>
 <li>
 <a href="me.html">About Me</a>
@@ -123,7 +123,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 </li>
 </ul>
 
-<h2 id="toc_1.3">Tools</h2>
+<h2 id="toc_1.3">Tools + Geeky Stuff</h2>
 <ul>
 <li>
 <a href="Vim.html">Vim</a>. <em>The</em> editor you need. I don't edit things without it.
@@ -145,22 +145,24 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <li>
 <a href="Git.html">Git</a>. I'm learning this powerful VCS. 
 </li>
-<ul>
-<li>
-Check out how I use Git, Vimwiki, cron, and several other fantastic tools to maintain this Wiki here: <a href="About.html">About the Maintenance of this Personal Knowledge Base</a>.
-</li>
-</ul>
 <li>
 <a href="MathJax with Vimwiki.html">MathJax with Vimwiki</a>. Check out how I set up MathJax with Vimwiki here, so I can display cool math such as $a^2 = b^2 + c^2$.
 </li>
-</ul>
-
-<h2 id="toc_1.4">Devices</h2>
-<ul>
 <li>
 <a href="Kindle.html">Kindle</a>. I am an ardent Kindle advocate.
 </li>
 </ul>
+
+<h2 id="toc_1.4">About</h2>
+<ul>
+<li>
+<a href="About.html">About the Maintenance of this Personal Knowledge Base</a>. Check out how I use Git, Vimwiki, cron, and several other fantastic tools to maintain this Wiki here. 
+</li>
+<li>
+<a href="log.html">Site Maintenance Log</a>.
+</li>
+</ul>
+ 
 <hr />
 <h2 id="toc_1.5">Contact</h2>
 <p>
@@ -170,7 +172,7 @@ Check out how I use Git, Vimwiki, cron, and several other fantastic tools to mai
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: January 31, 2012 19:33:19 
+Last Modified: February 05, 2012 20:31:50 
 </p>
 
 </body>
