add a link to vim_config at Github in index.wiki

--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <h2 id="toc_1.3">Tools + Geeky Stuff</h2>
 <ul>
 <li>
-<a href="Vim.html">Vim</a>. <em>The</em> editor you need. I don't edit things without it.
+<a href="Vim.html">Vim</a>. <em>The</em> editor. I don't edit things without it. <a href="https://github.com/concretevitamin/vim_config">My vimrc at Github</a>.
 </li>
 <ul>
 <li>
@@ -172,7 +172,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: February 05, 2012 20:31:50 
+Last Modified: February 06, 2012 18:54:14 
 </p>
 
 </body>
