--- a/html/log.html
+++ b/html/log.html
@@ -12,12 +12,13 @@
 
 <p>
 Feb 5, 2012. Edited CSS: modify the appearance of hyperlinks.
+Feb 6, 2012. Edited CSS: modify the layout (margins) of the pages.
 </p>
 
 <hr />
 <p>
 Created Date: February 05, 2012 20:27:52<br />
-Last Modified: February 05, 2012 20:31:24 
+Last Modified: February 06, 2012 19:10:41 
 </p>
 
 </body>
