--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,9 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <li>
 <a href="wordcount.html">wordcount.py, with interesting results!</a> wordcount.py is a small python program I wrote for fun. Check out the results!
 </li>
+<li>
+<a href="snippets.html">Collection of Code Snippets</a>. Good stuff.
+</li>
 </ul>
 <li>
 <a href="LaTeX.html">LaTeX</a>, notes on LaTeX.
@@ -171,7 +174,7 @@ Computer Science (Github (codes, projects, work): <a href="https://github.com/co
 <hr />
 <p>
 Created Date: Jan 31, 2011.<br />
-Last Modified: February 07, 2012 00:04:13 
+Last Modified: February 16, 2012 09:36:21 
 </p>
 
 </body>
