--- a/html/python_prime_generator.html
+++ b/html/python_prime_generator.html
@@ -5,7 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<pre """http://stackoverflow.com/questions/567222/simple-prime-generator-in-python""">
+<pre>
+"""http://stackoverflow.com/questions/567222/simple-prime-generator-in-python"""
 
 def gen_primes():
     """ Generate an infinite sequence of prime numbers.
