add fibo snippet

--- a/html/snippets.html
+++ b/html/snippets.html
@@ -17,7 +17,15 @@ quicksort' (x:xs) =
     in  bigger ++ [x] ++ smaller
 </pre>
 <p>
-I had three words to say when I saw the above: OH. MY. GOD.
+I had these three words to say when I saw the above: OH. MY. GOD.
+</p>
+
+<h2 id="toc_1.2">Fibonacci</h2>
+<pre>
+fibs = 0 : 1 : zipWith (+) fibs (tail fibs)
+</pre>
+<p>
+How elegant is that. <a href="http://en.literateprograms.org/Fibonacci_numbers_(Haskell)">Source</a>.
 </p>
 
 <h1 id="toc_2">Python</h1>
@@ -31,7 +39,7 @@ I had three words to say when I saw the above: OH. MY. GOD.
 <hr />
 <p>
 Created Date: February 16, 2012 09:36:57<br />
-Last Modified: February 16, 2012 09:39:25 
+Last Modified: February 16, 2012 16:00:54 
 </p>
 
 </body>
