add table of contents

--- a/html/snippets.html
+++ b/html/snippets.html
@@ -5,9 +5,22 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<h1 id="toc_1">Haskell</h1>
+<h1>Table of Contents</h1>
+<div class="toc">
+<ul>
+<li><a href="#toc_0.1">Haskell</a></li>
+<ul>
+<li><a href="#toc_0.1.1">Quicksort in Haskell...</a></li>
+<li><a href="#toc_0.1.2">Fibonacci</a></li>
+</ul>
+<li><a href="#toc_0.2">Python</a></li>
+</ul>
+</ul>
+</div>
 
-<h2 id="toc_1.1">Quicksort in Haskell...</h2>
+<h2 id="toc_0.1">Haskell</h2>
+
+<h3 id="toc_0.1.1">Quicksort in Haskell...</h3>
 <pre>
 quicksort' :: (Ord a) =&gt; [a] -&gt; [a]
 quicksort' [] = []
@@ -20,7 +33,7 @@ quicksort' (x:xs) =
 I had these three words to say when I saw the above: OH. MY. GOD.
 </p>
 
-<h2 id="toc_1.2">Fibonacci</h2>
+<h3 id="toc_0.1.2">Fibonacci</h3>
 <pre>
 fibs = 0 : 1 : zipWith (+) fibs (tail fibs)
 </pre>
@@ -28,7 +41,7 @@ fibs = 0 : 1 : zipWith (+) fibs (tail fibs)
 How elegant is that. <a href="http://en.literateprograms.org/Fibonacci_numbers_(Haskell)">Source</a>.
 </p>
 
-<h1 id="toc_2">Python</h1>
+<h2 id="toc_0.2">Python</h2>
 
 <ul>
 <li>
