--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -1,15 +1,17 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="Stylesheet" type="text/css" href="style.css" />
+<link rel="Stylesheet" type="text/css" href="style.css">
 <title>Linux Notes - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
+
 <h1 id="toc_1">Linux Notes</h1>
 
 <h2 id="toc_1.1">TO-DO SPACE</h2>
 <p>
-screen, tmux, conqueterm vim plugin, awesome
+screen, tmux, conqueterm vim plugin, awesome, xmonad
 </p>
 
 <h2 id="toc_1.2">Commands</h2>
@@ -66,26 +68,14 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <p>
 <code>#</code> Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
 <code>#</code> Use S+ page up/down to scroll up and down in terminal.<br />
+<code>#</code> In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>.
 </p>
 
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: January 12, 2012 19:32:57 
+Last Modified: Sun 26 Feb 2012 09:50:44 AM CST
 </p>
 
 </body>
-
-<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  MathJax.Hub.Config({
-    extensions: ["tex2jax.js"],
-    jax: ["input/TeX","output/HTML-CSS"],
-    tex2jax: {
-        inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
-        processEscapes: true
-    }
-  });
-</script>
-
 </html>
