small tip about repo

--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -68,13 +68,13 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <p>
 <code>#</code> Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
 <code>#</code> Use S+ page up/down to scroll up and down in terminal.<br />
-<code>#</code> In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>.
+<code>#</code> In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>. To avoid key/signatures problems, use the command <code>sudo add-apt-repository</code>. Also <code>sudo apt-get update</code>.
 </p>
 
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: Sun 26 Feb 2012 09:50:44 AM CST
+Last Modified: Sun 26 Feb 2012 10:30:09 AM CST
 </p>
 
 </body>
