add the haskell-platform ppa for 10.04

--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -14,7 +14,17 @@
 screen, tmux, conqueterm vim plugin, awesome, xmonad
 </p>
 
-<h2 id="toc_1.2">Commands</h2>
+<h2 id="toc_1.2">Software/Repo</h2>
+<ul>
+<li>
+haskell-platform is not packaged for Ubuntu 10.04LTS. Use this outdated ppa: <a href="https://launchpad.net/~justinbogner/+archive/haskell-platform">https://launchpad.net/~justinbogner/+archive/haskell-platform</a>
+
+<li>
+In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>. To avoid key/signatures problems, use the command <code>sudo add-apt-repository</code>. Also <code>sudo apt-get update</code>.
+
+</ul>
+
+<h2 id="toc_1.3">Commands</h2>
 <p>
 <strong>ls</strong><br />
 <code>ls -a</code> # <code>.</code> before files/directories names means they are hidden files/directories.<br />
@@ -31,13 +41,13 @@ screen, tmux, conqueterm vim plugin, awesome, xmonad
 <a href="find.html">find</a>
 </p>
 
-<h2 id="toc_1.3">Web Browsing</h2>
+<h2 id="toc_1.4">Web Browsing</h2>
 <p>
 <strong>firefox (vimperator)</strong><br />
 Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 </p>
 
-<h2 id="toc_1.4">Partition, Structure</h2>
+<h2 id="toc_1.5">Partition, Structure</h2>
 <p>
 <strong>File System Structure</strong><br />
 <code>/bin</code> # 	Common programs, shared by the system, the system administrator and the users.<br />
@@ -64,17 +74,16 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <code>man hier</code> read more on the file system hierarchy. Or <a href="http://en.wikipedia.org/wiki/Unix_directory_structure">here</a>.<br />
 </p>
 
-<h2 id="toc_1.5">(General) Notes</h2>
+<h2 id="toc_1.6">(General) Notes</h2>
 <p>
-<code>#</code> Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
-<code>#</code> Use S+ page up/down to scroll up and down in terminal.<br />
-<code>#</code> In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>. To avoid key/signatures problems, use the command <code>sudo add-apt-repository</code>. Also <code>sudo apt-get update</code>.
+<code>#</code> Auto-completion: Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
+<code>#</code> Use S+ page up/down to scroll up and down in the Gnome Terminal.<br />
 </p>
 
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: Sun 26 Feb 2012 10:30:09 AM CST
+Last Modified: Sun 26 Feb 2012 10:34:00 AM CST
 </p>
 
 </body>
