--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -24,7 +24,20 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 
 </ul>
 
-<h2 id="toc_1.3">Commands</h2>
+<h2 id="toc_1.3">(General) Notes</h2>
+<p>
+<code>#</code> Auto-completion: Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
+<code>#</code> Use S+ page up/down to scroll up and down in the Gnome Terminal.<br />
+</p>
+
+<h2 id="toc_1.4">Tricks/Tasks</h2>
+<ul>
+<li>
+<a href="run_command.html">Automatically run commands after Linux starts</a>.
+
+</ul>
+
+<h2 id="toc_1.5">Commands</h2>
 <p>
 <strong>ls</strong><br />
 <code>ls -a</code> # <code>.</code> before files/directories names means they are hidden files/directories.<br />
@@ -41,13 +54,7 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 <a href="find.html">find</a>
 </p>
 
-<h2 id="toc_1.4">Web Browsing</h2>
-<p>
-<strong>firefox (vimperator)</strong><br />
-Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
-</p>
-
-<h2 id="toc_1.5">Partition, Structure</h2>
+<h2 id="toc_1.6">Partition, Structure</h2>
 <p>
 <strong>File System Structure</strong><br />
 <code>/bin</code> # 	Common programs, shared by the system, the system administrator and the users.<br />
@@ -74,11 +81,6 @@ Create VIMRC file under HOME and name it <code>.vimperatorrc</code>.<br />
 <code>man hier</code> read more on the file system hierarchy. Or <a href="http://en.wikipedia.org/wiki/Unix_directory_structure">here</a>.<br />
 </p>
 
-<h2 id="toc_1.6">(General) Notes</h2>
-<p>
-<code>#</code> Auto-completion: Check out <code>man gnome-</code> and press <code>&lt;Tab&gt;</code>.<br />
-<code>#</code> Use S+ page up/down to scroll up and down in the Gnome Terminal.<br />
-</p>
 
 <hr />
 <p>
