--- a/html/Linux Notes.html
+++ b/html/Linux Notes.html
@@ -85,7 +85,7 @@ In Ubuntu, software sources are maintained in <code>/etc/apt/sources.list</code>
 <hr />
 <p>
 Created Date: Feb 17, 2011 23:00:39<br />
-Last Modified: Sun 26 Feb 2012 10:34:00 AM CST
+Last Modified: Sun 26 Feb 2012 02:37:49 PM CST
 </p>
 
 </body>
