--- a/html/Movies.html
+++ b/html/Movies.html
@@ -180,10 +180,17 @@
 <em>West Side Story</em>, 1961.
 </li>
 </ul>
+
+<h2 id="toc_1.13">Mar, 2012</h2>
+<ul>
+<li>
+<em>The Girl with the Dragon Tattoo</em>, 2011.
+</li>
+</ul>
 <hr />
 <p>
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: February 28, 2012 08:02:46 
+Last Modified: March 03, 2012 12:35:15 
 </p>
 
 </body>
