modify a bunch of appearance

--- a/html/me.html
+++ b/html/me.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <title>About Me - Covi</title>
-<meta http-equiv="Content-Type" content="text/html; charset=cp936" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <h1 id="toc_1">About Me</h1>
@@ -24,12 +24,6 @@ Problem Solving
 <blockquote>
 Explore the world of Computer Science and/or Mathematics; bring change to the world.
 </blockquote>
-<p>
-<br />
-<br />
-<br />
-<br />
-</p>
 
 <h2 id="toc_1.3">Programming and Computer Languages</h2>
 <ul>
@@ -47,7 +41,7 @@ I self-learned algorithms and data structures starting from 7th Grade when I was
 <hr />
 <p>
 Created Date: Feb 07, 2011 21:49:20<br />
-Last Modified: August 26, 2011 10:01:33 
+Last Modified: March 09, 2012 17:23:59 
 </p>
 
 </body>
